--- a/CS60DN46/Ch34MVC/MVC/CarLotMVC/Web.config
+++ b/CS60DN46/Ch34MVC/MVC/CarLotMVC/Web.config
@@ -1,19 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CarLotMVC-20210329110214.mdf;Initial Catalog=aspnet-CarLotMVC-20210329110214;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="AutoLotConnection"
-      connectionString="data source=(LocalDb)\MSSQLLocalDb;initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
-      providerName="System.Data.SqlClient"/>
+    <!--
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CarLotMVC-20210329110214.mdf;Initial Catalog=aspnet-CarLotMVC-20210329110214;Integrated Security=True" providerName="System.Data.SqlClient" />
+    -->
+    <add name="AutoLotConnection" connectionString="data source=(LocalDb)\MSSQLLocalDb;initial catalog=AutoLot;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
