--- a/Collection/Dictionary/Dictionary.csproj
+++ b/Collection/Dictionary/Dictionary.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExamingDictionary.cs" />
     <Compile Include="IntKey.cs" />
+    <Compile Include="languages.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
