--- a/Methods/cRegex/cRegex.csproj
+++ b/Methods/cRegex/cRegex.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Source\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\NPVRegex.cs" />
+    <Compile Include="Source\Replace.cs" />
     <Compile Include="Source\TimeRegex.cs" />
     <Compile Include="Source\Webvtt.cs" />
     <Compile Include="Source\WorkRegex.cs" />
