--- a/Variables/cVariable/cVariable.csproj
+++ b/Variables/cVariable/cVariable.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Source\Calculation.cs" />
+    <Compile Include="Source\CDecimal.cs" />
     <Compile Include="Source\Program.cs" />
     <Compile Include="Source\Marks.cs" />
     <Compile Include="Source\Valuable.cs" />
